[tool.poetry]
name = "insertion-sort"
version = "0.1.0"
description = ""
authors = ["Robert Portelli <github@robertportelli.com>"]
readme = "README.md"
packages = [{include = "insertion_sort", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
